--- a/public-apps/covid19/covid19-sg.rmd
+++ b/public-apps/covid19/covid19-sg.rmd
@@ -71,7 +71,7 @@ date_second_wave = as.Date("2020-02-25")
 The first case detected in Singapore on `r format(min_date, "%d %B %Y")`. 
 
 ```{r}
-style = "display: inline-block;vertical-align:top; padding-right: 20px"
+style = "display: inline-block;vertical-align:top;padding-right: 20px"
 bootstrapPage(
   div(style=style, dateRangeInput("range_date", "Date range", 
                                   start = min_date, end = max_date,
@@ -79,7 +79,7 @@ bootstrapPage(
   div(style=style, numericInput("binwidth_date", "Days bin width", value = 1, min=1, max=14)))
 
 renderPlot({
-    # input = list(range_date = c(as.Date(min_date), as.Date(max_date)), binwidth=1)
+    # input = list(range_date = c(as.Date(min_date), as.Date(max_date)), binwidth=1) # test
     min_date = input$range_date[1]
     max_date = input$range_date[2]
     data = df[df$confirmed.at.date >= min_date & df$confirmed.at.date <= max_date,]
@@ -92,23 +92,23 @@ renderPlot({
       theme
 }, height=280)
 
-# renderPlot({
-#     min_date = input$range_date[1]
-#     max_date = input$range_date[2]
-#     data = df[df$confirmed.at.date >= min_date & df$confirmed.at.date <= max_date,]
+renderPlot({
+    min_date = input$range_date[1]
+    max_date = input$range_date[2]
+    data = df[df$confirmed.at.date >= min_date & df$confirmed.at.date <= max_date,]
 
-#     type_label = c("imported case", "local transmission")
-#     names(type_label) = c("Imported", "Local")
+    type_label = c("imported case", "local transmission")
+    names(type_label) = c("Imported", "Local")
 
-#     ggplot(data=data, aes(x=confirmed.at.date, fill=infection.source)) +
-#       geom_histogram(stat="bin", binwidth=input$binwidth_date) + 
-#       facet_wrap(~ infection.source, ncol=1, labeller = camelcase_labeller) + 
-#       geom_vline(xintercept=date_second_wave, size=2, col="red") +
-#       scale_fill_discrete(name="Case type", breaks=type_label, labels=names(type_label)) + 
-#       xlab("") + ylab("Number of confirmed cases detected\n") +
-#       scale_x_date(date_breaks = "weeks", date_labels = "%Y EW %U") +
-#       theme
-# })
+    ggplot(data=data, aes(x=confirmed.at.date, fill=infection.source)) +
+      geom_histogram(stat="bin", binwidth=input$binwidth_date) + 
+      facet_wrap(~ infection.source, ncol=1, labeller = camelcase_labeller) + 
+      geom_vline(xintercept=date_second_wave, size=2, col="red") +
+      scale_fill_discrete(name="Case type", breaks=type_label, labels=names(type_label)) + 
+      xlab("") + ylab("Number of confirmed cases detected\n") +
+      scale_x_date(date_breaks = "weeks", date_labels = "%Y EW %U") +
+      theme
+})
 ```
 
 From here, we can see that there are two waves of cases, the first from EW 03 to EW 07 and second from EW 08 onwards. These are associated with the Chinese cases mainly and when there was a global spread subsequently with Europe as the epicenter.
