--- a/public-apps/covid19/covid19-sg.rmd
+++ b/public-apps/covid19/covid19-sg.rmd
@@ -115,22 +115,22 @@ From here, we can see that there are two waves of cases, the first from EW 03 to
 
 
 ```{r}
-# data_1st_wave = data.table(df[df$confirmed.at.date < date_second_wave &
-#                               df$infection.source == "imported case",])
-# data_1st_wave = data_1st_wave[, list(N=length(case)),by="country.of.origin"]
+data_1st_wave = data.table(df[df$confirmed.at.date < date_second_wave &
+                              df$infection.source == "imported case",])
+data_1st_wave = data_1st_wave[, list(N=length(case)),by="country.of.origin"]
 
-# data_2nd_wave = data.table(df[df$confirmed.at.date >= date_second_wave &
-#                               df$infection.source == "imported case",])
-# data_2nd_wave = data_2nd_wave[, list(N=length(case)),by="country.of.origin"]
+data_2nd_wave = data.table(df[df$confirmed.at.date >= date_second_wave &
+                              df$infection.source == "imported case",])
+data_2nd_wave = data_2nd_wave[, list(N=length(case)),by="country.of.origin"]
 
-# grid.arrange(
-#   ggplot(data_1st_wave, aes(x=camelcase_labeller("", country.of.origin), y=N)) +
-#   geom_bar(stat = "identity") + coord_flip() + theme_minimal() +
-#   xlab("") + ylab("") + ggtitle("First wave"),
-#   ggplot(data_2nd_wave, aes(x=camelcase_labeller("", country.of.origin), y=N)) +
-#   geom_bar(stat = "identity") + coord_flip() + theme_minimal() +
-#   xlab("") + ylab("Number of imported cases detected") + ggtitle("Second wave")
-# )
+grid.arrange(
+  ggplot(data_1st_wave, aes(x=camelcase_labeller("", country.of.origin), y=N)) +
+  geom_bar(stat = "identity") + coord_flip() + theme_minimal() +
+  xlab("") + ylab("") + ggtitle("First wave"),
+  ggplot(data_2nd_wave, aes(x=camelcase_labeller("", country.of.origin), y=N)) +
+  geom_bar(stat = "identity") + coord_flip() + theme_minimal() +
+  xlab("") + ylab("Number of imported cases detected") + ggtitle("Second wave")
+)
 ```
 
 
