--- a/public-apps/covid19/covid19-sg.rmd
+++ b/public-apps/covid19/covid19-sg.rmd
@@ -115,18 +115,17 @@ From here, we can see that there are two waves of cases, the first from EW 03 to
 
 
 ```{r}
-data_1st_wave = data.table(df[df$confirmed.at.date < date_second_wave &
-                              df$infection.source == "imported case",])
+data_1st_wave = data.table(df[df$confirmed.at.date < date_second_wave & df$infection.source == "imported case",])
 data_1st_wave = data_1st_wave[, list(N=length(case)),by="country.of.origin"]
 
-data_2nd_wave = data.table(df[df$confirmed.at.date >= date_second_wave &
-                              df$infection.source == "imported case",])
+data_2nd_wave = data.table(df[df$confirmed.at.date >= date_second_wave & df$infection.source == "imported case",])
 data_2nd_wave = data_2nd_wave[, list(N=length(case)),by="country.of.origin"]
 
 grid.arrange(
   ggplot(data_1st_wave, aes(x=camelcase_labeller("", country.of.origin), y=N)) +
   geom_bar(stat = "identity") + coord_flip() + theme_minimal() +
   xlab("") + ylab("") + ggtitle("First wave"),
+  
   ggplot(data_2nd_wave, aes(x=camelcase_labeller("", country.of.origin), y=N)) +
   geom_bar(stat = "identity") + coord_flip() + theme_minimal() +
   xlab("") + ylab("Number of imported cases detected") + ggtitle("Second wave")
@@ -136,11 +135,16 @@ grid.arrange(
 
 #### Cases through time
 
+```{r} 
+max_load = 9*1200*0.15 # hospital capacity
+hosp_prop = 0.2        # proportion of cases requiring hospitalisation
+```
+
 Case load is an important metric that is correlated also with hospital load. Here, it's the sum of people who are not recovered. 
 
 Measuring hospital load is key to ensure that hospitals are not overloaded.  We assume that the number of those who require hospitalisation is 20% of the case load, since it is a conservative estimate that 20% of the patients require hospitalisation and/or ICU care. From [24 Mar 2020](https://go.gov.sg/measures24mar), those who still test positive but display no symptoms will no longer be hospitalised. 
 
-There are 9 public acute hospitals in Singapore, with an average capacity of 1,200 beds. They are currently operating at approximately [75% load](https://www.moh.gov.sg/resources-statistics/healthcare-institution-statistics/beds-occupancy-rate-(bor)). We assume that hospitals can operate at a 90% bed load, to ensure that hospitals are not overtaxed and there is sufficient isolation between covid patients (more than usual required). Then there would be `r # max_load` beds available. 
+There are 9 public acute hospitals in Singapore, with an average capacity of 1,200 beds. They are currently operating at approximately [75% load](https://www.moh.gov.sg/resources-statistics/healthcare-institution-statistics/beds-occupancy-rate-(bor)). We assume that hospitals can operate at a 90% bed load, to ensure that hospitals are not overtaxed and there is sufficient isolation between covid patients (more than usual required). Then there would be `r max_load` beds available. 
 
 ```{r}
 
@@ -157,11 +161,7 @@ There are 9 public acute hospitals in Singapore, with an average capacity of 1,2
 # df_cases_day = data.table(unnest(df_cases, cols=c(day, case))); rm(df_cases)
 # df_cases_day = df_cases_day[, list(hospital_load=length(case)), by="day"]
 # df_cases_day$hospital_load = as.numeric(df_cases_day$hospital_load)
-# df_cases_day[day>=date_no_hosp,]$hospital_load =  df_cases_day[day>=date_no_hosp,]$hospital_load*0.2
-
-
-# max_load = 9*1200*0.15
-# load_prop = 0.2
+# df_cases_day[day>=date_no_hosp,]$hospital_load =  df_cases_day[day>=date_no_hosp,]$hospital_load*hosp_prop
 
 # renderPlot({
 #   ggplot(data=df_cases_day, aes(x=day, y=hospital_load)) +
