--- a/public-apps/covid19/covid19-sg.rmd
+++ b/public-apps/covid19/covid19-sg.rmd
@@ -147,21 +147,18 @@ Measuring hospital load is key to ensure that hospitals are not overloaded.  We 
 There are 9 public acute hospitals in Singapore, with an average capacity of 1,200 beds. They are currently operating at approximately [75% load](https://www.moh.gov.sg/resources-statistics/healthcare-institution-statistics/beds-occupancy-rate-(bor)). We assume that hospitals can operate at a 90% bed load, to ensure that hospitals are not overtaxed and there is sufficient isolation between covid patients (more than usual required). Then there would be `r max_load` beds available. 
 
 ```{r}
+date_no_hosp = as.Date("2020-03-24")
+df_cases = df[df$status != "Deceased", c("case", "symptomatic.at.date", "recovered.at.date", "confirmed.at.date")]
+df_cases[is.na(df_cases$recovered.at.date),]$recovered.at.date = Sys.Date()
+df_cases[is.na(df_cases$symptomatic.at.date),]$symptomatic.at.date = 
+  df_cases[is.na(df_cases$symptomatic.at.date),]$confirmed.at.date # use confirmed.at if no symptomatic
 
-# N cases still requiring treatment
-
-# date_no_hosp = as.Date("2020-03-24")
-# df_cases = df[df$status != "Deceased", c("case", "symptomatic.at.date", "recovered.at.date", "confirmed.at.date")]
-# df_cases[is.na(df_cases$recovered.at.date),]$recovered.at.date = Sys.Date()
-# df_cases[is.na(df_cases$symptomatic.at.date),]$symptomatic.at.date = 
-#   df_cases[is.na(df_cases$symptomatic.at.date),]$confirmed.at.date # use confirmed.at if no symptomatic
-
-# df_cases$day = mapply(function(min, max) { seq(min, max, by="day") }, 
-#                        min=df_cases$symptomatic.at.date, max=df_cases$recovered.at.date)
-# df_cases_day = data.table(unnest(df_cases, cols=c(day, case))); rm(df_cases)
-# df_cases_day = df_cases_day[, list(hospital_load=length(case)), by="day"]
-# df_cases_day$hospital_load = as.numeric(df_cases_day$hospital_load)
-# df_cases_day[day>=date_no_hosp,]$hospital_load =  df_cases_day[day>=date_no_hosp,]$hospital_load*hosp_prop
+df_cases$day = mapply(function(min, max) { seq(min, max, by="day") }, 
+                       min=df_cases$symptomatic.at.date, max=df_cases$recovered.at.date)
+df_cases_day = data.table(unnest(df_cases, cols=c(day, case))); rm(df_cases)
+df_cases_day = df_cases_day[, list(hospital_load=length(case)), by="day"]
+df_cases_day$hospital_load = as.numeric(df_cases_day$hospital_load)
+df_cases_day[day>=date_no_hosp,]$hospital_load =  df_cases_day[day>=date_no_hosp,]$hospital_load*hosp_prop
 
 # renderPlot({
 #   ggplot(data=df_cases_day, aes(x=day, y=hospital_load)) +
@@ -183,7 +180,7 @@ There are 9 public acute hospitals in Singapore, with an average capacity of 1,2
 
 ### Recovery time
 
-Recovered date is based on the discharged date when there are [consecutive negative PCR tests](https://www.channelnewsasia.com/news/singapore/.
+Recovered date is based on the discharged date when there are [consecutive negative PCR tests](https://www.channelnewsasia.com/news/singapore/).
 
 #### Days to recovery histogram
 
