--- a/public-apps/covid19/covid19-sg.rmd
+++ b/public-apps/covid19/covid19-sg.rmd
@@ -203,7 +203,7 @@ min = as.numeric(min(df[, c("days.to.recover.symptomatic")], na.rm=T))
 max = as.numeric(max(df[, c("days.to.recover.symptomatic")], na.rm=T))
 hist_max = max(table(cut(as.numeric(df[, c("days.to.recover.symptomatic")]), 
                          breaks=seq(min, max, by=binwidth), right = FALSE)))
-                         
+
 ggplot(df, aes(x=days.to.recover.symptomatic)) + 
   geom_histogram(binwidth=binwidth, na.rm=T) + 
   xlab("Days to recover") + ylab("Number of people") +
@@ -253,8 +253,30 @@ Age does not appear to be associated with the number of days to recover ($R^2$ =
 
 #### Key measures
 
-- 2019-03-28: defer non-essential trips to malls
-- 2019-03-27: [home based learning](http://go.gov.sg/homebasedlearning) once a week for primary, secondary schools, and junior college; staggered Wednesday, Thursday, Friday respectively 
-- 
+- 2020-03-28: defer non-essential trips to malls
+- 2020-03-27: [home based learning](http://go.gov.sg/homebasedlearning) once a week for primary, secondary schools, and junior college; staggered Wednesday, Thursday, Friday respectively 
+- 2020-03-26: Spacing regulated in malls/ supermaket. E.g. 1 m distance (marked by duct tapes)
+- 2020-03-25: large-scale events (>250 people) suspended till 30 Jun
+- 2020-03-24: Stay Home Notice (SHN) for UK/US returning Singaporeans in dedicated locations. Mass events, senior-linked activities, cinemas/bars, tuitions, religious gatherings suspended till 30 Apr. 
+- 2020-03-22: [No short-term visitors allowed](http://go.gov.sg/travel22mar). Only work pass holders providing essential services allowed in.
+- 2020-03-20: [ActiveSG sport centres social distancing measures](http://go.gov.sg/sport15mar).
+- 2020-03-18: [Malaysia under lock down](http://go.gov.sg/mco) till 14 Apr; 14-day SHN for all entering Singapore. No entry to short-term visitors who have visited Mainland China, France, Germany, Italy, Iran, Republic of Korea, Spain in last 14 days.
+- 2020-03-16: [Singaporeans to defer all non-essential travel](http://go.gov.sg/travel-15mar); [temporary closure of mosques](https://www.muis.gov.sg/Media/Media-Releases/16-Mar-20-Media-Statement-on-Extension-of-Temporary-Closure-of-Mosques).
+- 2020-03-14: Encourage employers to allow [tele-commuting/ staggered work hours](http://go.gov.sg/workplacesocialdistancing).
+- 2020-03-13: [Large-scale ticketed events with >250 people to be deferred/cancelled](http://go.gov.sg/socialdistancing-13mar).
+- 2020-03-11: [Senior activities suspended, till 24 March - was later extended](http://go.gov.sg/PAseniors).
+- 2020-03-10: Port call by [Costa Fortuna](http://go.gov.sg/mpa9mar).
+- 2020-03-04: [Work pass holders allowed to return, but will be swabbed with 5-6 hours turnaround for test results](http://go.gov.sg/mom3mar).
+- 2020-02-28: [Schools with extra precaution](http://go.gov.sg/covid19-MOE).
+- 2020-02-23: [Start of travel advisories to outbreak countries other than China (e.g. Daegu, Korea)](http://go.gov.sg/mom-27feb).
+- 2020-02-19: [Introduction of Stay Home Notice](http://go.gov.sg/StayHomeNotice).
+- 2020-02-07: [Some community spread in Singapore, DORSCON orange. Business continuity plans kick in and stemperature screening)[http://go.gov.sg/dorscon7feb].
+
+
+
+
+
+
+
 
 Source: https://www.moh.gov.sg/news-highlights/
