--- a/public-apps/covid19/covid19-sg.rmd
+++ b/public-apps/covid19/covid19-sg.rmd
@@ -271,7 +271,7 @@ Age does not appear to be associated with the number of days to recover ($R^2$ =
 - 2020-02-28: [schools with extra precaution](http://go.gov.sg/covid19-MOE).
 - 2020-02-23: [start of travel advisories to outbreak countries other than China (e.g. Daegu, Korea)](http://go.gov.sg/mom-27feb).
 - 2020-02-19: [introduction of Stay Home Notice](http://go.gov.sg/StayHomeNotice).
-- 2020-02-07: [some community spread in Singapore, DORSCON orange. Business continuity plans kick in and stemperature screening)(http://go.gov.sg/dorscon7feb).
+- 2020-02-07: [some community spread in Singapore, DORSCON orange. Business continuity plans kick in and temp. screening](http://go.gov.sg/dorscon7feb).
 
 
 
