--- a/public-apps/covid19/covid19-sg.rmd
+++ b/public-apps/covid19/covid19-sg.rmd
@@ -146,10 +146,6 @@ date_no_hosp = as.Date("2020-03-24") # date when hospitalisation not required fo
 
 Case load is an important metric that is correlated also with hospital load. Here, it's the sum of people who are not recovered. 
 
-Measuring hospital load is key to ensure that hospitals are not overloaded.  We assume that the number of those who require hospitalisation is 20% of the case load, since it is a conservative estimate that 20% of the patients require hospitalisation and/or ICU care. From [24 Mar 2020](https://go.gov.sg/measures24mar), those who still test positive but display no symptoms will no longer be hospitalised. 
-
-There are 9 public acute hospitals in Singapore, with an average capacity of 1,200 beds. They are currently operating at approximately [75% load](https://www.moh.gov.sg/resources-statistics/healthcare-institution-statistics/beds-occupancy-rate-(bor)). We assume that hospitals can operate at a 90% bed load, to ensure that hospitals are not overtaxed and there is sufficient isolation between covid patients (more than usual required). Then there would be `r max_load` beds available. 
-
 ```{r}
 df_cases = df[df$status != "Deceased", c("case", "symptomatic.at.date", "recovered.at.date", "confirmed.at.date")]
 df_cases[is.na(df_cases$recovered.at.date),]$recovered.at.date = Sys.Date()
@@ -159,18 +155,41 @@ df_cases[is.na(df_cases$symptomatic.at.date),]$symptomatic.at.date =
 df_cases$day = mapply(function(min, max) { seq(min, max, by="day") }, 
                        min=df_cases$symptomatic.at.date, max=df_cases$recovered.at.date)
 df_cases_day = data.table(unnest(df_cases, cols=c(day, case))); rm(df_cases)
-df_cases_day = df_cases_day[, list(hospital_load=length(case)), by="day"]
-df_cases_day$hospital_load = as.numeric(df_cases_day$hospital_load)
-df_cases_day[day>=date_no_hosp,]$hospital_load =  df_cases_day[day>=date_no_hosp,]$hospital_load*hosp_prop
+df_cases_day = df_cases_day[, list(case_load=length(case)), by="day"]
+df_cases_day$case_load = as.numeric(df_cases_day$case_load)
+df_cases_day$hospital_load = df_cases_day$case_load
+df_cases_day[day>=date_no_hosp,]$hospital_load =  
+  df_cases_day[day>=date_no_hosp,]$hospital_load * hosp_prop
+```
 
+
+```{r}
 renderPlot({
-  ggplot(data=df_cases_day, aes(x=day, y=hospital_load)) +
+  ggplot(data=df_cases_day, aes(x=day, y=case_load)) +
     geom_bar(stat="identity", fill="steelblue") + 
-    xlab("") + ylab("Number of hospitalised peersons\n") + 
+    xlab("") + ylab("Number of cases\n") + 
     scale_x_date(date_breaks = "weeks" , date_labels = "%Y EW %U") +
     theme
 }, height=280)
+```
 
+Measuring hospital load is key to ensure that hospitals are not overloaded.  We assume that the number of those who require hospitalisation is 20% of the case load, since it is a conservative estimate that 20% of the patients require hospitalisation and/or ICU care. From [24 Mar 2020](https://go.gov.sg/measures24mar), those who still test positive but display no symptoms will no longer be hospitalised. 
+
+```{r}
+renderPlot({
+  ggplot(data=df_cases_day, aes(x=day, y=hospital_load)) +
+    geom_bar(stat="identity", fill="steelblue") + 
+    geom_vline(xintercept=date_no_hosp, size=2, col="red") +
+    xlab("") + ylab("Number of hospitalised persons\n") + 
+    scale_x_date(date_breaks = "weeks" , date_labels = "%Y EW %U") +
+    theme
+}, height=280)
+```
+
+
+There are 9 public acute hospitals in Singapore, with an average capacity of 1,200 beds. They are currently operating at approximately [75% load](https://www.moh.gov.sg/resources-statistics/healthcare-institution-statistics/beds-occupancy-rate-(bor)). We assume that hospitals can operate at a 90% bed load, to ensure that hospitals are not overtaxed and there is sufficient isolation between covid patients (more than usual required). Then there would be `r max_load` beds available. 
+
+```{r}
 renderPlot({
   ggplot(data=df_cases_day, aes(x=day, y=round(hospital_load/max_load*100, 2))) +
     geom_bar(stat="identity", fill="steelblue") + 
@@ -238,6 +257,7 @@ renderPlot({
     xlab("Age category") + ylab("Days to recover") + theme
 })
 ```
+
 #### Gender
 
 ```{r}
@@ -266,7 +286,7 @@ ggplot(df, aes(x=gender, y=days.to.recover.symptomatic)) +
 
 - 2020-03-28: defer non-essential trips to malls
 - 2020-03-27: [home based learning](http://go.gov.sg/homebasedlearning) once a week for primary, secondary schools, and junior college
-- 2020-03-26: spacing regulated in malls/ supermaket. E.g. 1 m distance (marked by duct tapes)
+- 2020-03-26: spacing regulated in malls/ supermarket, e.g. 1 m distance (marked by duct tapes)
 - 2020-03-25: large-scale events (>250 people) suspended till 30 Jun
 - 2020-03-24: many gatherings suspended till 30 Apr. 
 - 2020-03-22: [no short-term visitors allowed, workpass only essential services](http://go.gov.sg/travel22mar).
