--- a/public-apps/covid19/covid19-sg.rmd
+++ b/public-apps/covid19/covid19-sg.rmd
@@ -154,11 +154,11 @@ data_2nd_wave$country.of.origin = factor(data_2nd_wave$country.of.origin,
 
 
 grid.arrange(
-  ggplot(data_1st_wave[order(-N)], aes(x=camelcase_labeller("", country.of.origin), y=N)) +
+  ggplot(data_1st_wave, aes(x=camelcase_labeller("", country.of.origin), y=N)) +
   geom_bar(stat = "identity") + coord_flip() + theme_minimal() +
   xlab("") + ylab("") + ggtitle("First wave"),
   
-  ggplot(data_2nd_wave[order(-N)], aes(x=camelcase_labeller("", country.of.origin), y=N)) +
+  ggplot(data_2nd_wave, aes(x=camelcase_labeller("", country.of.origin), y=N)) +
   geom_bar(stat = "identity") + coord_flip() + theme_minimal() +
   xlab("") + ylab("Number of imported cases detected") + ggtitle("Second wave")
 )
