--- a/public-apps/covid19/covid19-sg.rmd
+++ b/public-apps/covid19/covid19-sg.rmd
@@ -153,11 +153,13 @@ data_2nd_wave = data_2nd_wave[, list(N=length(case)), by="country.of.origin"]
 grid.arrange(
   ggplot(data_1st_wave, aes(x=camelcase_labeller("", country.of.origin), y=N)) +
   geom_bar(stat = "identity") + coord_flip() + theme_minimal() +
-  xlab("") + ylab("") + ggtitle("First wave"),
+  xlab("") + ylab("") + ggtitle("First wave") +
+  theme(axis.text.x=element_text(size=rel(0.5), angle=90)),
   
   ggplot(data_2nd_wave, aes(x=reorder(camelcase_labeller("", country.of.origin), -N), y=N)) +
   geom_bar(stat = "identity") + coord_flip() + theme_minimal() +
-  xlab("") + ylab("Number of imported cases detected") + ggtitle("Second wave")
+  xlab("") + ylab("Number of imported cases detected") + ggtitle("Second wave") +
+  theme(axis.text.x=element_text(size=rel(0.5), angle=90))
 )
 ```
 
