--- a/public-apps/covid19/covid19-sg.rmd
+++ b/public-apps/covid19/covid19-sg.rmd
@@ -151,7 +151,7 @@ data_2nd_wave = data.table(df[df$confirmed.at.date >= date_second_wave & df$infe
 data_2nd_wave = data_2nd_wave[, list(N=length(case)), by="country.of.origin"]
 
 grid.arrange(
-  ggplot(data_1st_wave, aes(x=camelcase_labeller("", country.of.origin), y=N)) +
+  ggplot(data_1st_wave, aes(x=reorder(camelcase_labeller("", country.of.origin), -N), y=N)) +
   geom_bar(stat = "identity") + coord_flip() + theme_minimal() +
   xlab("") + ylab("") + ggtitle("First wave") +
   theme(axis.text.x=element_text(size=rel(0.5), angle=90)),
@@ -159,7 +159,7 @@ grid.arrange(
   ggplot(data_2nd_wave, aes(x=reorder(camelcase_labeller("", country.of.origin), -N), y=N)) +
   geom_bar(stat = "identity") + coord_flip() + theme_minimal() +
   xlab("") + ylab("Number of imported cases detected") + ggtitle("Second wave") +
-  theme(axis.text.x=element_text(size=rel(0.5), angle=90))
+  theme(axis.text.x=element_text(size=rel(0.5)))
 )
 ```
 
