--- a/public-apps/covid19/covid19-sg.rmd
+++ b/public-apps/covid19/covid19-sg.rmd
@@ -265,6 +265,7 @@ ggplot(df, aes(x=days.to.recover.symptomatic)) +
 
 ```{r}
 deceased = df[df$status == "Deceased"]
+deceased$N = 1:dim(deceased)[1]
 kable(deceased)
 ```
 
